syntax = "proto3";

option go_package = "github.com/ary82/microservices/internal/proto";
package proto;

service UserService {
  rpc GetUser(UserId) returns (User);
  rpc GetUsers(GetUsersParams) returns (Users);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
}

message UserId { string value = 1; }

message User {
  bytes id = 1;
  string email = 2;
  string username = 3;
  UserType type = 4;
}

enum UserType {
  USER_TYPE_DEFAULT = 0;
  USER_TYPE_ADMIN = 1;
}

message GetUsersParams {}

message Users {
  int64 number = 1;
  repeated User users = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse { string access_token = 1; }

message RegisterUserRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  UserType type = 4;
}

message RegisterUserResponse { bytes id = 1; }
